<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graph"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/comoTeSientes"
                android:textAlignment="center"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_verySad"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_verysad" />

                <ImageButton
                    android:id="@+id/btn_happy"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_happy" />

                <ImageButton
                    android:id="@+id/btn_neutral"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_neutral" />

                <ImageButton
                    android:id="@+id/btn_veryHappy"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_very_happy" />

                <ImageButton
                    android:id="@+id/btn_sad"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_sad" />
            </LinearLayout>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/guardar"
                android:textAllCaps="false" />

            <GridLayout
                android:id="@+id/bargraphs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:columnCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/muyFeliz"
                    android:textAlignment="center" />

                <View
                    android:id="@+id/graphVeryHappy"
                    android:layout_width="250dp"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/feliz"
                    android:textAlignment="center" />

                <View
                    android:id="@+id/graphHappy"
                    android:layout_width="250dp"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/neutral"
                    android:textAlignment="center" />

                <View
                    android:id="@+id/graphNeutral"
                    android:layout_width="250dp"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/triste"
                    android:textAlignment="center" />

                <View
                    android:id="@+id/graphTriste"
                    android:layout_width="250dp"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/muyTriste"
                    android:textAlignment="center" />

                <View
                    android:id="@+id/graphVerySad"
                    android:layout_width="250dp"
                    android:layout_height="20dp" />
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>